# BVH-Traversal

./: BENCHMARK_README.md  CMakeLists.txt  CMakeLists_simplified.txt  benchmark.py  benchmark_test.cmd  framework.vcxproj  rt.vcxproj  single_benchmark.py
benchmark_configurations/kernels/: early_break.txt  if_while_tesla_variants.txt  legacy_speculative.txt  reference_kernels.txt  stackless.txt  stackless_2.txt  stackless_persistent_speculative.txt  test_kernels.txt  warmup.txt  warp_sync.txt
benchmark_configurations/plot/: basic.cnf  early_break_cmp.cnf  full.cnf  optix.cnf  persistent_cmp.cnf  simple_stackless_baseline.cnf  stackless_opt.cnf  stackless_traversal_order.cnf  test.cnf  tex_cmp.cnf
benchmark_configurations/scene/: conference.txt  fairyforest.txt  sanmiguel.txt  scene_template.txt  sibenik.txt
benchmark_configurations/setup/: benchmark_ao_diffuse_10.txt  benchmark_ao_diffuse_25.txt  benchmark_batch_50.txt  benchmark_primary_100.txt  norm_test.txt  norm_test_primary_only.txt  setup_template.txt
benchmarks/: conference.txt  fairyforest.txt  optix_template.txt  process_benchmarks.py  raytracing_performance_mrays_s.xlsx  sibenik.txt
benchmarks/data/: output.txt
benchmarks/norm_tests/: conference_10.txt
src/framework/gpu/: CudaCompiler.cpp
src/rt/: App.cpp  App.hpp
src/rt/cuda/: CudaBVH.cpp  CudaBVH.hpp  CudaTracer.cpp  CudaTracer.hpp
src/rt/kernels/: CudaTracerKernels.hpp  KERNEL_README  KERNEL_README.md  fermi_speculative_while_while.cu  pascal_dynamic_fetch_stackless.cu  pascal_dynamic_fetch_stackless_opt5.cu  pascal_persistent_speculative_stackless.cu  pascal_persistent_stackless.cu  pascal_persistent_stackless_opt1.cu  pascal_persistent_stackless_opt2.cu  pascal_persistent_stackless_opt3.cu  pascal_persistent_stackless_opt4.cu  pascal_persistent_stackless_opt5.cu  pascal_speculative_stackless.cu  pascal_speculative_stackless_opt5.cu  pascal_speculative_stackless_tex1d.cu  pascal_speculative_stackless_tex1d_2.cu  pascal_speculative_stackless_tex1d_opt5.cu  pascal_stackless.cu  pascal_stackless_opt3.cu  pascal_stackless_opt5.cu  tesla_persistent_if_if.cu  tesla_persistent_packet.cu  tesla_persistent_speculative_while_while.cu  tesla_persistent_speculative_while_while_early_break.cu  tesla_persistent_speculative_while_while_warp_sync.cu  tesla_persistent_speculative_while_while_warp_sync_early_break.cu  tesla_persistent_while_while_early_break.cu  turing_persistent_if_while.cu  turing_persistent_while_if.cu
